--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,5 @@
 <!-- Banner sec start -->
-<div class="bannerSec comPadding wow fadeIn" data-wow-delay="0.5s">
+<div class="bannerSec comPadding">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
@@ -22,7 +22,7 @@
 </div>
 <!-- Banner sec end -->
 <!-- howitworks sec start -->
-<div class="howitworks comPadding wow fadeInLeft" data-wow-delay="0.5s">
+<div class="howitworks comPadding" id="storyProcess">
     <div class="container">
         <div class="howgrid">
             <div class="howcol">
@@ -45,7 +45,7 @@
 <!-- howitworks sec end -->
 
 <!-- our feature sec start -->
-<div class="ourFeature comPadding wow fadeInRight" data-wow-delay="0.5s">
+<div class="ourFeature comPadding" id="services">
     <div class="container">
         <div class="comTitle text-center">Our Services</div>
         <!-- <div class="smallTitle text-center">Take control of your family's future with eRoll on</div> -->
@@ -86,7 +86,7 @@
 <!-- our feature sec end -->
 
 <!-- signu today sec start -->
-<div class="signupToday comPadding wow fadeIn" data-wow-delay="0.5s">
+<div class="signupToday comPadding" id="mission">
     <div class="text-center container">
         <div class="comTitle">Our Mission</div>
         <div class="signupInfo">
@@ -108,7 +108,7 @@
 <!-- signu today sec end -->
 
 <!-- foundation sec start -->
-<div class="foundationSec comPadding wow fadeInLeft" data-wow-delay="0.5s">
+<div class="foundationSec comPadding">
     <div class="container">
         <div class="comTitle text-center">
             Join As Partner
@@ -117,23 +117,31 @@
         <div class="foundationFlex">
             <div class="haldFoundationpart rightInfo">
                 <div class="fInfo">
-                    <div class="name">Tyre Dealer?</div>
+                    <div class="name">
+                        <img src="images/tyre-dealer.svg" alt="Tyre Dealer" />
+                        Tyre Dealer?
+                    </div>
                 </div>
                 <div class="fInfo">
+                    <img src="images/garage.svg" alt="Tyre Dealer" />
                     <div class="name">Mechanic / Garage Owner?</div>
                 </div>
                 <div class="fInfo">
-                    <div class="name">EV Charging Provider?</div>
+                    <div class="name">
+                        <img src="images/chargingstation.svg" alt="EV Charging Provider" />
+                        EV Charging Provider?
+                    </div>
                 </div>
                 <div class="fInfo">
-                    <div class="name">Auto Parts Store?</div>
+                    <div class="name">
+                        <img src="images/autoPartsStore.svg" alt=" Auto Parts Store" />
+                        Auto Parts Store?
+                    </div>
                 </div>
             </div>
             <div class="joinRollon haldFoundationpart imgDiv">
-                <div class="">Join RollOn today and grow your business with our trusted national network.
-                    <br />
-                    <a href="mailto:partner@rollonmobility.com">partner@rollonmobility.com</a>
-                </div>
+                Join RollOn today and grow your business with our trusted national network.
+                <a href="mailto:partner@rollonmobility.com">partner@rollonmobility.com</a>
             </div>
         </div>
     </div>
